--- a/signUp.css
+++ b/signUp.css
@@ -48,6 +48,12 @@
     font-size: 1em;
     box-sizing: border-box;
   }
+  input[type="text"], input[type="password"], input[type="email"]:focus {
+    outline: none;
+  }
+  h2{
+    color: #014e60;
+  }
   
   /* Styles for submit buttons */
   button[type="submit"] {
@@ -57,14 +63,14 @@
     border: none;
     border-radius: 4px;
     font-size: 1em;
-    background-color: #333;
-    color: #fff;
+    background-color: #019b98;
+    color: #c8c8c8;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   button[type="submit"]:hover {
-    background-color: #ff4500;
+    background-color: #014e60;
   }
   
   /* Styles for labels within the forms */
@@ -80,7 +86,7 @@
   }
   
   .form-label:hover {
-    color: #ff4500; /* Color for switch links */
+    color: #014e60; /* Color for switch links */
     cursor: pointer;
   }
   
@@ -88,6 +94,7 @@
   .form-text {
     font-size: 0.9em;
     margin-top: 1em;
+    color: #014e60;
   }
   
   .form-text label:hover {
